--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@nextui-org/card": "^2.0.33",
+    "@nextui-org/chip": "^2.0.32",
     "@nextui-org/modal": "^2.0.39",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/table": "^2.0.39",
